--- a/charts/memcached/Chart.yaml
+++ b/charts/memcached/Chart.yaml
@@ -1,6 +1,10 @@
-apiVersion: v1
+apiVersion: v2
 appVersion: v1.5.5
+dependencies:
+- name: helm-toolkit
+  repository: file://../helm-toolkit
+  version: '>= 0.1.0'
 description: OpenStack-Helm Memcached
 home: https://github.com/memcached/memcached
 name: memcached
-version: 0.1.12
+version: 2025.1.0+85569c271
