--- a/charts/ceph-provisioners/Chart.yaml
+++ b/charts/ceph-provisioners/Chart.yaml
@@ -1,6 +1,10 @@
-apiVersion: v1
+apiVersion: v2
 appVersion: v1.0.0
+dependencies:
+- name: helm-toolkit
+  repository: file://../helm-toolkit
+  version: '>= 0.1.0'
 description: OpenStack-Helm Ceph Provisioner
 home: https://github.com/ceph/ceph
 name: ceph-provisioners
-version: 0.1.8
+version: 2025.1.0+85569c271
