--- a/charts/ceph-provisioners/templates/secret-registry.yaml
+++ b/charts/ceph-provisioners/templates/secret-registry.yaml
@@ -1,5 +1,3 @@
-#!/bin/sh
-
 {{/*
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -14,15 +12,6 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */}}
 
-set -ex
-COMMAND="${@:-start}"
-
-function start () {
-  exec /bin/memcached_exporter --memcached.address "$MEMCACHED_HOST:$MEMCACHED_PORT"
-}
-
-function stop () {
-  kill -TERM 1
-}
-
-$COMMAND
+{{- if and .Values.manifests.secret_registry .Values.endpoints.oci_image_registry.auth.enabled }}
+{{ include "helm-toolkit.manifests.secret_registry" ( dict "envAll" . "registryUser" .Chart.Name ) }}
+{{- end }}
