--- a/charts/memcached/values.yaml
+++ b/charts/memcached/values.yaml
@@ -103,6 +103,9 @@ endpoints:
         default: 53
         protocol: UDP
 
+network:
+  memcached: {}
+
 network_policy:
   memcached:
     ingress:
@@ -119,7 +122,7 @@ monitoring:
 images:
   pull_policy: IfNotPresent
   tags:
-    dep_check: 'quay.io/airshipit/kubernetes-entrypoint:v1.0.0'
+    dep_check: 'quay.io/airshipit/kubernetes-entrypoint:latest-ubuntu_focal'
     memcached: 'docker.io/library/memcached:1.5.5'
     prometheus_memcached_exporter: docker.io/prom/memcached-exporter:v0.4.1
     image_repo_sync: docker.io/library/docker:17.07.0
@@ -136,7 +139,7 @@ labels:
 
 manifests:
   configmap_bin: true
-  deployment: true
+  statefulset: true
   job_image_repo_sync: true
   network_policy: false
   service: true
@@ -147,19 +150,55 @@ pod:
     server:
       pod:
         runAsUser: 65534
+        runAsNonRoot: true
+        fsGroup: 65534
       container:
         memcached:
           allowPrivilegeEscalation: false
           readOnlyRootFilesystem: true
+          capabilities:
+            drop:
+              - ALL
         memcached_exporter:
           allowPrivilegeEscalation: false
           readOnlyRootFilesystem: true
+          capabilities:
+            drop:
+              - ALL
+  probes:
+    memcached:
+      memcached:
+        readiness:
+          enabled: True
+          params:
+            initialDelaySeconds: 0
+            periodSeconds: 10
+            timeoutSeconds: 5
+        liveness:
+          enabled: True
+          params:
+            initialDelaySeconds: 10
+            periodSeconds: 15
+            timeoutSeconds: 10
+      memcached_exporter:
+        liveness:
+          enabled: True
+          params:
+            initialDelaySeconds: 15
+            periodSeconds: 60
+            timeoutSeconds: 10
+        readiness:
+          enabled: True
+          params:
+            initialDelaySeconds: 5
+            periodSeconds: 60
+            timeoutSeconds: 10
   affinity:
     anti:
       topologyKey:
         default: kubernetes.io/hostname
       type:
-        default: preferredDuringSchedulingIgnoredDuringExecution
+        default: requiredDuringSchedulingIgnoredDuringExecution
       weight:
         default: 10
   tolerations:
@@ -169,13 +208,15 @@ pod:
       - key: node-role.kubernetes.io/master
         operator: Exists
         effect: NoSchedule
+      - key: node-role.kubernetes.io/control-plane
+        operator: Exists
+        effect: NoSchedule
   lifecycle:
     upgrades:
       deployments:
         pod_replacement_strategy: RollingUpdate
         revision_history: 3
         rolling_update:
-          max_surge: 3
           max_unavailable: 1
     termination_grace_period:
       memcached:
