--- a/roles/neutron/vars/main.yml
+++ b/roles/neutron/vars/main.yml
@@ -14,6 +14,9 @@
 
 __neutron_helm_values:
   endpoints: "{{ openstack_helm_endpoints }}"
+  secrets:
+    identity:
+      octavia: neutron-keystone-octavia
   images:
     tags: "{{ atmosphere_images | vexxhost.atmosphere.openstack_helm_image_tags('neutron') }}"
   network:
