Add project and domain info
This is required due to change in helm-toolkit [1]

[1] https://review.opendev.org/c/openstack/openstack-helm/+/948604

Change-Id: Ie30ebfa9ef941be778d08078094f8728bd19b8cd

Change-Id: Icb38dacf327dfedd5d6112dbd6838abab02d9997
Signed-off-by: ricolin <rlin@vexxhost.com>

--- a/roles/openstack_helm_endpoints/vars/main.yml
+++ b/roles/openstack_helm_endpoints/vars/main.yml
@@ -69,6 +69,9 @@ _openstack_helm_endpoints_identity:
         region_name: "{{ openstack_helm_endpoints_keystone_region_name }}"
         username: "admin-{{ openstack_helm_endpoints_keystone_region_name }}"
         password: "{{ openstack_helm_endpoints_keystone_admin_password }}"
+        project_domain_name: Default
+        project_name: admin
+        user_domain_name: Default
     hosts:
       default: keystone-api
     scheme:
@@ -100,6 +103,9 @@ _openstack_helm_endpoints_image:
         region_name: "{{ openstack_helm_endpoints_glance_region_name }}"
         username: "glance-{{ openstack_helm_endpoints_glance_region_name }}"
         password: "{{ openstack_helm_endpoints_glance_keystone_password }}"
+        project_domain_name: service
+        project_name: service
+        user_domain_name: service
   image:
     scheme:
       public: https
@@ -125,6 +131,9 @@ _openstack_helm_endpoints_volumev3:
         region_name: "{{ openstack_helm_endpoints_cinder_region_name }}"
         username: "cinder-{{ openstack_helm_endpoints_cinder_region_name }}"
         password: "{{ openstack_helm_endpoints_cinder_keystone_password }}"
+        project_domain_name: service
+        project_name: service
+        user_domain_name: service
   volumev3:
     scheme:
       public: https
@@ -150,6 +159,9 @@ _openstack_helm_endpoints_placement:
         region_name: "{{ openstack_helm_endpoints_placement_region_name }}"
         username: "placement-{{ openstack_helm_endpoints_placement_region_name }}"
         password: "{{ openstack_helm_endpoints_placement_keystone_password }}"
+        project_domain_name: service
+        project_name: service
+        user_domain_name: service
   oslo_db:
     auth:
       placement:
@@ -171,6 +183,9 @@ _openstack_helm_endpoints_key_manager:
         region_name: "{{ openstack_helm_endpoints_barbican_region_name }}"
         username: "barbican-{{ openstack_helm_endpoints_barbican_region_name }}"
         password: "{{ openstack_helm_endpoints_barbican_keystone_password }}"
+        project_domain_name: service
+        project_name: service
+        user_domain_name: service
   oslo_db:
     auth:
       barbican:
@@ -192,6 +207,9 @@ _openstack_helm_endpoints_network:
         region_name: "{{ openstack_helm_endpoints_neutron_region_name }}"
         username: "neutron-{{ openstack_helm_endpoints_neutron_region_name }}"
         password: "{{ openstack_helm_endpoints_neutron_keystone_password }}"
+        project_domain_name: service
+        project_name: service
+        user_domain_name: service
   network:
     scheme:
       public: https
@@ -217,6 +235,9 @@ _openstack_helm_endpoints_compute:
         region_name: "{{ openstack_helm_endpoints_nova_region_name }}"
         username: "nova-{{ openstack_helm_endpoints_nova_region_name }}"
         password: "{{ openstack_helm_endpoints_nova_keystone_password }}"
+        project_domain_name: service
+        project_name: service
+        user_domain_name: service
   compute:
     scheme:
       public: https
@@ -286,6 +307,9 @@ _openstack_helm_endpoints_baremetal:
         region_name: "{{ openstack_helm_endpoints_ironic_region_name }}"
         username: "ironic-{{ openstack_helm_endpoints_ironic_region_name }}"
         password: "{{ openstack_helm_endpoints_ironic_keystone_password }}"
+        project_domain_name: service
+        project_name: service
+        user_domain_name: service
   baremetal:
     scheme:
       public: https
@@ -311,6 +335,9 @@ _openstack_helm_endpoints_dns:
         region_name: "{{ openstack_helm_endpoints_designate_region_name }}"
         username: "desigante-{{ openstack_helm_endpoints_designate_region_name }}"
         password: "{{ openstack_helm_endpoints_designate_keystone_password }}"
+        project_domain_name: service
+        project_name: service
+        user_domain_name: service
   dns:
     scheme:
       public: https
@@ -357,6 +384,9 @@ _openstack_helm_endpoints_load_balancer:
         region_name: "{{ openstack_helm_endpoints_octavia_region_name }}"
         username: "octavia-{{ openstack_helm_endpoints_octavia_region_name }}"
         password: "{{ openstack_helm_endpoints_octavia_keystone_password }}"
+        project_domain_name: service
+        project_name: service
+        user_domain_name: service
   load_balancer:
     scheme:
       public: https
@@ -410,10 +440,16 @@ _openstack_helm_endpoints_orchestration:
         region_name: "{{ openstack_helm_endpoints_heat_region_name }}"
         username: "heat-{{ openstack_helm_endpoints_heat_region_name }}"
         password: "{{ openstack_helm_endpoints_heat_keystone_password }}"
+        project_domain_name: service
+        project_name: service
+        user_domain_name: service
       heat_trustee:
         region_name: "{{ openstack_helm_endpoints_heat_region_name }}"
         username: "heat-trustee-{{ openstack_helm_endpoints_heat_region_name }}"
         password: "{{ openstack_helm_endpoints_heat_trustee_keystone_password }}"
+        project_domain_name: service
+        project_name: service
+        user_domain_name: service
       heat_stack_user:
         region_name: "{{ openstack_helm_endpoints_heat_region_name }}"
         username: "heat-stack-user-{{ openstack_helm_endpoints_heat_region_name }}"
@@ -460,6 +496,9 @@ _openstack_helm_endpoints_container_infra:
         region_name: "{{ openstack_helm_endpoints_magnum_region_name }}"
         username: "magnum-{{ openstack_helm_endpoints_magnum_region_name }}"
         password: "{{ openstack_helm_endpoints_magnum_keystone_password }}"
+        project_domain_name: service
+        project_name: service
+        user_domain_name: service
       magnum_stack_user:
         region_name: "{{ openstack_helm_endpoints_magnum_region_name }}"
         username: "magnum-domain-{{ openstack_helm_endpoints_magnum_region_name }}"
@@ -515,6 +554,9 @@ _openstack_helm_endpoints_sharev2:
         region_name: "{{ openstack_helm_endpoints_manila_region_name }}"
         username: "manila-{{ openstack_helm_endpoints_manila_region_name }}"
         password: "{{ openstack_helm_endpoints_manila_keystone_password }}"
+        project_domain_name: service
+        project_name: service
+        user_domain_name: service
   oslo_db:
     auth:
       manila:
