[helm-toolkit][barbican] fix ClassName
Change-Id: Ic98c4d2927221ba427b015fd03750eea804925d1
Signed-off-by: ricolin <rlin@vexxhost.com>
(cherry picked from commit 80a758c6773cd80c98e964356094292c1e8ed7b0)

--- a/charts/barbican/templates/pod-test.yaml
+++ b/charts/barbican/templates/pod-test.yaml
@@ -33,6 +33,8 @@ metadata:
     {{ tuple $envAll | include "helm-toolkit.snippets.release_uuid" }}
 {{ dict "envAll" $envAll "podName" "barbican-test" "containerNames" (list "init" "barbican-test") | include "helm-toolkit.snippets.kubernetes_mandatory_access_control_annotation" | indent 4 }}
 spec:
+{{ tuple "barbican_tests" . | include "helm-toolkit.snippets.kubernetes_pod_priority_class" | indent 2 }}
+{{ tuple "barbican_tests" . | include "helm-toolkit.snippets.kubernetes_pod_runtime_class" | indent 2 }}
   serviceAccountName: {{ $serviceAccountName }}
 {{ dict "envAll" $envAll "application" "test" | include "helm-toolkit.snippets.kubernetes_pod_security_context" | indent 2 }}
   nodeSelector:
