[helm-toolkit][horizon] fix ClassName
Change-Id: Ia5f4b01937bf55f91fbb7ffaa89549700e6792d1
Signed-off-by: ricolin <rlin@vexxhost.com>
(cherry picked from commit 97285887489d86e3059f04d9b16b6753d63a78d7)

--- a/charts/horizon/templates/pod-helm-tests.yaml
+++ b/charts/horizon/templates/pod-helm-tests.yaml
@@ -34,6 +34,8 @@ metadata:
 spec:
 {{ dict "envAll" $envAll "application" "test" | include "helm-toolkit.snippets.kubernetes_pod_security_context" | indent 2 }}
   restartPolicy: Never
+{{ tuple "horizon_tests" . | include "helm-toolkit.snippets.kubernetes_pod_priority_class" | indent 2 }}
+{{ tuple "horizon_tests" . | include "helm-toolkit.snippets.kubernetes_pod_runtime_class" | indent 2 }}
   serviceAccountName: {{ $serviceAccountName }}
 {{ if $envAll.Values.pod.tolerations.horizon.enabled }}
 {{ tuple $envAll "horizon" | include "helm-toolkit.snippets.kubernetes_tolerations" | indent 2 }}
