--- a/charts/manila/values.yaml
+++ b/charts/manila/values.yaml
@@ -1061,7 +1061,7 @@ manifests:
   job_ks_service: true
   job_ks_user: true
   pdb_api: true
-  pod_test: true
+  pod_rally_test: true
   secret_db: true
   network_policy: false
   secret_ingress_tls: true
