--- a/charts/nova/templates/pod-rally-test.yaml
+++ b/charts/nova/templates/pod-rally-test.yaml
@@ -44,6 +44,8 @@ spec:
 {{ tuple $envAll "nova" | include "helm-toolkit.snippets.kubernetes_tolerations" | indent 2 }}
 {{ end }}
   restartPolicy: Never
+{{ tuple "nova_tests" . | include "helm-toolkit.snippets.kubernetes_pod_priority_class" | indent 2 }}
+{{ tuple "nova_tests" . | include "helm-toolkit.snippets.kubernetes_pod_runtime_class" | indent 2 }}
   serviceAccountName: {{ $serviceAccountName }}
   initContainers:
 {{ tuple $envAll "tests" $mounts_tests_init | include "helm-toolkit.snippets.kubernetes_entrypoint_init_container" | indent 4 }}
