Revert "fix trusts in python-openstackclient"
This reverts commit 6f3a2f642d83d75e5a19f748fb60e6a37951e29c.

--- a/images/python-openstackclient/Dockerfile
+++ b/images/python-openstackclient/Dockerfile
@@ -3,12 +3,6 @@
 # Atmosphere-Rebuild-Time: 2024-06-25T22:49:25Z
 
 FROM openstack-venv-builder AS build
-ARG OPENSTACKCLIENT_GIT_REF=bc1930c20ede2018413dc5b89b5dd99c46fdd054
-# NOTE(rlin): Directly use stable/2025.1 source for python-openstackclient until
-#             https://review.opendev.org/c/openstack/python-openstackclient/+/944991
-#             released for stable/2025.1.
-ADD --keep-git-dir=true https://opendev.org/openstack/python-openstackclient.git#${OPENSTACKCLIENT_GIT_REF} /src/python-openstackclient
-RUN git -C /src/python-openstackclient fetch --unshallow
 RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
 uv pip install \
     --constraint /upper-constraints.txt \
@@ -22,7 +16,7 @@ uv pip install \
         python-manilaclient \
         python-neutronclient \
         python-octaviaclient \
-        /src/python-openstackclient \
+        python-openstackclient \
         python-swiftclient
 EOF
 
