feat: add vault operator and webhook
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>
Signed-off-by: Tadas Sutkaitis <tadasas@gmail.com>

--- a/roles/defaults/defaults/main.yml
+++ b/roles/defaults/defaults/main.yml
@@ -18,7 +18,18 @@ atmosphere_version: 5.0.0-beta.1 # x-release-please-version
 atmosphere_ingress_class_name: atmosphere
 atmosphere_ingress_cluster_issuer: atmosphere
 atmosphere_ingress_annotations: {}
+
+# Images
 atmosphere_image_prefix: ""
+
+# Vault
+# KV2 secret store mount point
+atmosphere_vault_mount_point: secret/atmosphere
+# Prefix for secret path inside secret store
+# Example: 'region-1/' -> {{ atmosphere_vault_mount_point }}/data/region-1/secret/path
+atmosphere_vault_secret_path_prefix: ""
+# Deploy and use local Vault
+atmosphere_vault_internal: true
 
 # Network backend
 atmosphere_network_backend: openvswitch
