--- a/galaxy.yml
+++ b/galaxy.yml
@@ -12,6 +12,7 @@ dependencies:
   ansible.posix: 1.3.0
   ansible.utils: ">=2.9.0"
   community.crypto: 2.2.3
+  community.hashi_vault: ">=6.2.0"
   community.general: 7.3.0
   community.mysql: 3.6.0
   kubernetes.core: 2.4.0
