--- a/molecule/aio/molecule.yml
+++ b/molecule/aio/molecule.yml
@@ -14,6 +14,8 @@
 
 dependency:
   name: galaxy
+  options:
+    requirements-file: molecule/aio/requirements-poc.yaml
 driver:
   name: default
   options:
