--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ classifiers = [
 dependencies = [
   "ansible-core>=2.15.9",
   "docker-image-py>=0.1.12",
+  "hvac>=2.3.0",
   "jmespath>=1.0.1",
   "netaddr>=0.8.0",
   "openstacksdk>1",
