--- a/roles/defaults/vars/main.yml
+++ b/roles/defaults/vars/main.yml
@@ -229,6 +229,11 @@ _atmosphere_images:
   tempest_run_tests: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/tempest:{{ atmosphere_release }}"
   valkey: "{{ atmosphere_image_prefix }}docker.io/bitnami/valkey:8.0.2-debian-12-r4"
   valkey_sentinel: "{{ atmosphere_image_prefix }}docker.io/bitnami/valkey-sentinel:8.0.2-debian-12-r4"
+  vault: "{{ atmosphere_image_prefix }}docker.io/hashicorp/vault:1.19.5"
+  vault_operator: "{{ atmosphere_image_prefix }}ghcr.io/bank-vaults/vault-operator:v1.23.0"
+  vault_operator_bank_vaults: "{{ atmosphere_image_prefix }}ghcr.io/bank-vaults/bank-vaults:v1.32.0"
+  vault_secrets_webhook: "{{ atmosphere_image_prefix }}ghcr.io/bank-vaults/vault-secrets-webhook:v1.22.0"
+  vault_secrets_webhook_vault_env: "{{ atmosphere_image_prefix }}ghcr.io/bank-vaults/vault-env:v1.22.0"
   vector: "{{ atmosphere_image_prefix }}docker.io/timberio/vector:0.38.0-debian"
 
 atmosphere_images: '{{ _atmosphere_images | combine(atmosphere_image_overrides, recursive=True) }}'
