test: add temporary roles_path
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>

--- a/molecule/aio/molecule.yml
+++ b/molecule/aio/molecule.yml
@@ -36,6 +36,7 @@ provisioner:
   config_options:
     defaults:
       callbacks_enabled: ansible.posix.profile_tasks
+      roles_path: "/root/.ansible/collections/ansible_collections/vexxhost/atmosphere/roles"
     tags:
       run: ${ATMOSPHERE_ANSIBLE_TAGS-all}
   options:
