default atmosphere_vault_internal to true
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>

--- a/playbooks/secrets.yml
+++ b/playbooks/secrets.yml
@@ -13,7 +13,7 @@
         - always
 
 - ansible.builtin.import_playbook: atmosphere.common.vault_operator
-  when: atmosphere_vault_internal | bool
+  when: atmosphere_vault_internal | default(true) | bool
   vars:
     target: controllers
     vault_operator_image: "{{ atmosphere_images['vault_operator'] }}"
