feat: add vault roles cr
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>

--- a/molecule/aio/group_vars/all/molecule.yml
+++ b/molecule/aio/group_vars/all/molecule.yml
@@ -26,6 +26,9 @@ valkey_helm_values:
   replica:
     replicaCount: 1
 
+vault_spec:
+  size: 1
+
 ingress_nginx_helm_values:
   controller:
     config:
