--- a/playbooks/secrets.yml
+++ b/playbooks/secrets.yml
@@ -1,6 +1,15 @@
 # Copyright (c) 2025 VEXXHOST, Inc.
 # SPDX-License-Identifier: Apache-2.0
 
+- name: Deploy Vault
+  hosts: controllers
+  become: true
+  roles:
+    - role: vault
+      when: atmosphere_vault_internal | default(true) | bool
+      tags:
+        - vault
+
 - hosts: "{{ target | default('controllers') }}"
   become: true
   roles:
@@ -11,15 +20,6 @@
         atmosphere_images: "{{ atmosphere_images }}"
       tags:
         - always
-
-- ansible.builtin.import_playbook: atmosphere.common.vault_operator
-  when: atmosphere_vault_internal | default(true) | bool
-  vars:
-    target: controllers
-    vault_operator_image: "{{ atmosphere_images['vault_operator'] }}"
-    vault_operator_bank_vaults_image: "{{ atmosphere_images['vault_operator_bank_vaults'] }}"
-    vault_operator_node_selector:
-      openstack-control-plane: enabled
 
 - ansible.builtin.import_playbook: atmosphere.common.vault_secrets_webhook
   vars:
