--- a/roles/vault/defaults/main.yml
+++ b/roles/vault/defaults/main.yml
@@ -1,7 +1,7 @@
 # Copyright (c) 2025 VEXXHOST, Inc.
 # SPDX-License-Identifier: Apache-2.0
 
-# vault_host: "{{ undef('You must specify a Vault host using vault_host') }}"
+vault_host: "{{ undef('You must specify a Vault host using vault_host') }}"
 # vault_host_tls_secret_name: "{{ openstack_helm_ingress_secret_name | default(vault_host + '-tls')}}"
 # vault_ingress_annotations: {}
 # vault_ingress_class_name: "{{ atmosphere_ingress_class_name }}"
