feat: add external secrets
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>

--- a/playbooks/secrets.yml
+++ b/playbooks/secrets.yml
@@ -28,3 +28,11 @@
     vault_secrets_webhook_vault_env_image: "{{ atmosphere_images['vault_secrets_webhook_vault_env'] }}"
     vault_secrets_webhook_node_selector:
       openstack-control-plane: enabled
+
+- name: Deploy External Secrets
+  hosts: controllers
+  become: true
+  roles:
+    - role: external_secrets
+      tags:
+        - external-secrets
