--- a/roles/vault/defaults/main.yml
+++ b/roles/vault/defaults/main.yml
@@ -7,6 +7,8 @@ vault_host: "{{ undef('You must specify a Vault host using vault_host') }}"
 # vault_ingress_class_name: "{{ atmosphere_ingress_class_name }}"
 
 vault_namespace: vault-operator-system
+vault_kubeconfig: "{{ kubeconfig_path | default('/etc/kubernetes/admin.conf') }}"
+
 vault_spec: {}
 
 vault_log_level: info
