--- a/playbooks/generate_workspace.yml
+++ b/playbooks/generate_workspace.yml
@@ -229,7 +229,7 @@
           openstack_helm_endpoints_magnum_registry_host: "container-infra-registry.{{ domain_name }}"
           openstack_helm_endpoints_rgw_host: "object-store.{{ domain_name }}"
           openstack_helm_endpoints_manila_api_host: "share.{{ domain_name }}"
-          vault_host: "vault{{ domain_name }}"
+          vault_host: "vault.{{ domain_name }}"
 
     - name: Write new endpoints file to disk
       ansible.builtin.copy:
