feat: add vault_token role
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>

--- a/roles/defaults/defaults/main.yml
+++ b/roles/defaults/defaults/main.yml
@@ -28,6 +28,8 @@ atmosphere_vault_mount_point: secret/atmosphere
 # Prefix for secret path inside secret store
 # Example: 'region-1/' -> {{ atmosphere_vault_mount_point }}/data/region-1/secret/path
 atmosphere_vault_secret_path_prefix: ""
+# Kubernetes auth method path
+atmosphere_vault_kubernetes_auth_path: kubernetes/local
 
 # Network backend
 atmosphere_network_backend: openvswitch
