--- a/roles/vault/vars/main.yml
+++ b/roles/vault/vars/main.yml
@@ -82,7 +82,7 @@ _vault_config:
             token_type: default
             token_policies: ["write_kv_all"]
       - type: kubernetes
-        path: kubernetes/local
+        path: {{ atmosphere_vault_kubernetes_auth_path }}
         description: Kubernetes authentication for local cluster
         config:
           kubernetes_host: https://kubernetes.default.svc
