feat: add node selector for vault_token pod
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>

--- a/roles/vault_token/tasks/main.yml
+++ b/roles/vault_token/tasks/main.yml
@@ -33,6 +33,8 @@
     env_vars: "{{ vault_token_pod_environment_variables }}"
     secret_mounts: "{{ vault_token_pod_secret_mounts }}"
     configmap_mounts: "{{ vault_token_pod_configmap_mounts }}"
+    node_selector:
+      openstack-control-plane: enabled
   register: vault_token
 
 - name: Set Vault token fact
