--- a/roles/vault_secrets/meta/main.yml
+++ b/roles/vault_secrets/meta/main.yml
@@ -3,7 +3,7 @@
 
 galaxy_info:
   author: VEXXHOST, Inc.
-  description: Ansible role for issuing Vault token
+  description: Ansible role for Vault secret management
   license: Apache-2.0
   min_ansible_version: 5.5.0
   standalone: false
@@ -19,3 +19,4 @@ galaxy_info:
 
 dependencies:
   - role: defaults
+  - role: vault_token
