--- a/roles/vault_token/defaults/main.yml
+++ b/roles/vault_token/defaults/main.yml
@@ -9,7 +9,6 @@ vault_token_configmap: vault-get-token
 vault_token_pod_environment_variables:
   VAULT_ADDR: https://vault.vault-operator-system:8200
   VAULT_CACERT: /etc/vault-tls/ca.crt
-  VAULT_ROLE: "{{ vault_token_role }}"
 
 vault_token_pod_secret_mounts:
   - secret_name: vault-tls
@@ -23,9 +22,9 @@ vault_token_issuing_script:
   token.sh: |
     #!/bin/sh
     export JWT=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)
-    export VAULT_TOKEN=$(vault write -field=token auth/{{ atmosphere_vault_kubernetes_auth_path }}/login role=$VAULT_ROLE jwt=$JWT)
-    export ROLE_ID=$(vault read -field=role_id auth/approle/role/$VAULT_ROLE/role-id)
-    export SECRET_ID=$(vault write -f -field=secret_id auth/approle/role/$VAULT_ROLE/secret-id)
+    export VAULT_TOKEN=$(vault write -field=token auth/{{ atmosphere_vault_kubernetes_auth_path }}/login role={{ vault_token_role }} jwt=$JWT)
+    export ROLE_ID=$(vault read -field=role_id auth/approle/role/{{ vault_token_role }}/role-id)
+    export SECRET_ID=$(vault write -f -field=secret_id auth/approle/role/{{ vault_token_role }}/secret-id)
     vault write -field=token auth/approle/login \
       role_id=$ROLE_ID \
       secret_id=$SECRET_ID
