--- a/roles/vault/vars/main.yml
+++ b/roles/vault/vars/main.yml
@@ -125,3 +125,7 @@ _vault_config:
       - type: kv-v2
         path: {{ atmosphere_vault_mount_point }}
         description: Atmosphere static secrets
+
+_vault_ingress_annotations:
+  cert-manager.io/cluster-issuer: "{{ vault_ingress_cluster_issuer }}"
+  nginx.ingress.kubernetes.io/backend-protocol: https
